<resources>
    <string name="app_name">Project2</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="inventory_app">Inventory App</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="inventory_item_0_stock_3">inventory item 0 - Stock : 3</string>
    <string name="inventory_item_1_stock_1">inventory item 1 - Stock : 1</string>
    <string name="inventory_item_2_stock_4">inventory item 2 - Stock : 4</string>
    <string name="inventory_item_3_stock_100">inventory item 3 - Stock : 100</string>
    <string name="inventory_item_5_stock_25">inventory item 5 - Stock : 25</string>
    <string name="inventory_item_4_stock_15">inventory item 4 - Stock : 15</string>
    <string name="inventory">Inventory</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>